tools/flowc/tests/errors/error23a.flow
import tools/flowc/tests/errors/error23c;

export {
	a = 1;
}
